# llm-content-analyzer

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
content_analyzer/: __init__.py  content_analyzer.py  scan_local_mini.csv
content_analyzer/config/: analyzer_config.yaml  exclusions_config.yaml  prompts_config.yaml
content_analyzer/docs/: csv_parser.md  orchestrator_implementation.md  scan_local_integration.md
content_analyzer/modules/: __init__.py  adaptive_pipeline_manager.py  age_analyzer.py  api_client.py  cache_manager.py  csv_parser.py  db_manager.py  duplicate_detector.py  enhanced_cache.py  file_filter.py  prompt_manager.py  size_analyzer.py  sql_optimizer.py
content_analyzer/tests/: test.csv  test_age_analyzer.py  test_analytics_gui.py  test_api_client.py  test_api_test_thread.py  test_cache_complete.py  test_cache_connection_pool.py  test_cache_manager.py  test_cache_thread_safety.py  test_confidences.py  test_config.py  test_content_analyzer.py  test_csv_parser.py  test_db_manager.py  test_duplicate_detection.py  test_duplicate_detector.py  test_duplicate_utils.py  test_enhanced_cache.py  test_error_handling.py  test_file_filter.py  test_modules_import.py  test_progress_tracker.py  test_prompt_manager.py  test_prompt_validator.py  test_regressions.py  test_resume.py  test_safe_db_manager.py  test_size_analyzer.py  test_sql_leaks.py  (+2 more)
doc/: corrections_summary.md  corrections_update.md  gui_corrections_notes.md  performance_benchmarks.md
gui/: analytics_panel.py  main.py  main_window.py
scripts/: verify_db_usage.py
(+13 files in other folders)
