[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-content-analyzer"
version = "2.3.0"
description = "Module d'analyse de contenu de fichiers par LLM avec classification multi-domaines"
requires-python = ">=3.9"
dependencies = [
    "tenacity>=9.1.2",
    "circuitbreaker>=1.4",
    "requests>=2.31.0",
    "PyYAML>=6.0.0",
    "pandas>=2.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0", 
    "black>=24.0.0",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["content_analyzer/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
